# ndsl

./: .clang-format  .gitignore  .gitignore.rej  .gitmodules  CMakeLists.txt  config.h.in
docs/: EventLoop设计文档.docx  group1.md  ndsl.vsdx  ~$$ndsl.~vsdx
examples/: CMakeLists.txt
examples/Proxyserver_zzt/: CMakeLists.txt  Client.cc  Httphandler.cc  Httphandler.h  Protbload.proto  Server.cc  proxyserver.cc  var.h
examples/Relayserver/: client.cc  server.cc
examples/Relayserver_zsq/: CMakeLists.txt  server.cc  tcprelay.cc
examples/ftp_lgr/: CMakeLists.txt
examples/ftp_ly/: CMakeLists.txt  FtpClient.cc  FtpClient.h  FtpClientHandle.cc  FtpClient_.cc  FtpServer.cc  FtpServer_.cc
include/ndsl/: config.h
include/ndsl/net/: .BaseChannel.h.swp  .PipeAndFifo.h.swp  BaseChannel.h  CallbackIoChannel.h  Channel.h  ChannelCallBack.h  Clientplugin.h  Dns.h  ELThreadpool.h  Entity.h  Epoll.h  EventLoop.h  EventfdConnection.h  InterruptChannel.h  Multiplexer.h  PipeAndFifo.h  PipeChannel.h  Protbload.pb.h  Serverplugin.h  SignalChannel.h  SignalHandler.h  SocketAddress.h  SocketAddressUn.h  SocketOpt.h  TcpAcceptor.h  TcpChannel.h  TcpClient.h  TcpConnection.h  TimeWheel.h  TimerWheel.h  TimerfdChannel.h  UdpBind.h  UdpChannel.h  UdpClient.h  UdpEndpoint.h  UnixAcceptor.h  UnixChannel.h  UnixConnection.h  WorkQueue.h  multiplexer.h
include/ndsl/third/: pugiconfig.hpp
include/ndsl/utils/: Endian.h  Error.h  EventLoopThreadpool.h  Guid.h  Interrupt.h  Interrupter.h  Log.h  Noncopyable.h  Plugin.h  Thread.h  TimeStamp.h  Xml.h  pugixml.hpp  temp_define.h  xmlconfig.h
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  Log.cc  libuuid.so.1.0.0  main.cc
src/ndsl/: CMakeLists.txt
src/ndsl/net/: .BaseChannel.cc.swp  .PipeAndFifo.cc.swp  .SocketAddress.cc.swp  .UnixConnection.cc.swp  BaseChannel.cc  CMakeLists.txt  CallbackIoChannel.cc  Channel.cc  ELThreadpool.cc  Epoll.cc  EventLoop.cc  EventfdConnection.cc  InterruptChannel.cc  Multiplexer.cc  PipeAndFifo.cc  PipeChannel.cc  Protbload.pb.cc  SignalChannel.cc  SignalHandler.cc  SocketAddress.cc  SocketAddressUn.cc  SocketOpt.cc  SocketsOps.cc  SocketsOps.h  TcpAccepter.cc  TcpAcceptor.cc  TcpChannel.cc  TcpClient.cc  TcpConnection.cc  TimeWheel.cc  UdpBind.cc  UdpChannel.cc  UdpClient.cc  UdpEndpoint.cc  UnixAcceptor.cc  UnixChannel.cc  UnixConnection.cc  WorkQueue.cc  multiplexer.cc
src/ndsl/third/: Protbload.pb.cc  pugixml.cpp
src/ndsl/utils/: CMakeLists.txt  Endian.cc  Error.cc  EventLoopThreadpool.cc  Guid.cc  Interrupter.cc  Log.cc  Plugin.cc  Thread.cc  TimeStamp.cc  Xml.cc  xmlconfig.cpp
tests/: CMakeLists.txt  ls  test.cc  testMain.cc
tests/Plugintest/: plugintest.cc
tests/Relayserver/: client.cc
tests/easytest/: CMakeLists.txt  TcpConnectionTest.cc  client.cc  server.cc
tests/entitytest/: CMakeLists.txt  CMakelists.txt  EntityTest.cc  Protbload.proto
tests/mtest/: CMakeLists.txt  TestTcpConnection.cc
tests/net/: .UnixConnectionTest.cc.swp  CMakeLists.txt  ELThreadpoolTest.cc  EntityTest.cc  EpollTest.cc  EventLoopTest.cc  EventfdTest.cc  FifoIpcTest.cc  MultiplexerTest.cc  PipeAndFifoTest.cc  SignalfdTest.cc  SocketAddressTest.cc  TcpAcceptorTest.cc  TcpConnectionTest.cc  TimeWheelTest.cc  UdpEndpointTest.cc  UnixAndTcpSocketAddressTest.cc  UnixConnectionTest.cc
tests/ping-pong/: cli.val  client.cc  nClient.cc  server.cc  ~$性能对比.xlsx  一个假装很正式的性能测试报告.md  性能对比.xlsx
tests/utils/: CMakeLists.txt  EndianTest.cc  ErrorTest.cc  EventLoopThreadpoolTest.cc  GuidTest.cc  LogTest.cc  PluginTest.cc  Test.cc  ThreadTest.cc  TimeStampTest.cc  XMLConfig_test.cc  XmlTest.cc  main.cc  phone.xml  students.xml
